# nanoproxy

./: Cargo.toml  README.md  nanoproxy.toml
src/: config.rs  error.rs  http.rs  main.rs  management.rs  mdns.rs  proxy.rs
src/proxy/: ws.rs
src/tests/: mod.rs
templates/management/: index.html
