[package]
name = "nanoproxy"
version = "0.1.0"
authors = ["Lily Mara <lilymara@fastmail.com>"]
edition = "2018"

[dependencies]
actix = "0.12"
actix-codec = "0.4"
actix-http = "3.0.0-beta.8"
actix-web = "4.0.0-beta.8"
actix-web-actors = "4.0.0-beta.6"
anyhow = "1"
awc = "3.0.0-beta.7"
config = { version = "0.11", features = ["toml"] }
futures = "0.3"
if-addrs = "0.6"
serde = { version = "1", features = ["derive"] }
simple-mdns = "0.2"
tera = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
actix-rt = "2"
wiremock = "0.5"

[patch.crates-io]
# Currently blocked on my PR being merged https://github.com/actix/actix-web/pull/2338
actix-web = { git = "https://github.com/lily-mara/actix-web.git", branch = "ServiceConfig-default-service" }
